--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
         <h4> Send me a message</h4>
         <form id="contactForm">
           <label> Name</label><br>
-          <input type="text" name="name" id="name" /><br />
+          <input type="text" name="names" id="name" /><br />
           <label>Email</label><br>
           <input type="email" name="email" id="email" /><br />
           <label>Message</label><br>
-          <textarea name="name" id="message"></textarea><br />
+          <textarea name="message" id="message"></textarea><br />
           <button type="submit" class="white-btn">Submit</button>
         </form>
       </div>
