--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -2,23 +2,72 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./dashboard-styles.css">
-    <title>Dashboard</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://kit.fontawesome.com/29dd4087dd.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./dashboard-styles.css">
+  <link rel="stylesheet" href="../main.css">
+  <title>Dashboard</title>
 </head>
 
 <body>
-    <h1>Welcome <span id="loggedInUserName">"nameGoesHere"</span> to your Dashboard :) !</h1>
-    <h2>contents coming soon</h2>
-    <button> Delete my account</button>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script src="../init-firebase.js"></script>
-    <script src="../main.js"></script>
-    <script src="./dashboard-script.js"></script>
+  <div class="main">
+    <section class="sidebar">
+    </section>
+    <section class="main-display">
+      <header>
+        <div class="logo">
+          <a href="./index.html">
+            <img src="../landing page/assets/Ivad Code logo.svg" alt="the image of logo" />
+          </a>
+        </div>
+        <div class="dashboard-header">
+          <h3 class="dashboard-head">Dashboard</h3>
+          <a href="#" class="toggle-btn">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
+          <nav>
+            <ul class="nav-links">
+              <li><i class="fas fa-search fa-1x" style="font-size: 1.5rem; color: rgb(68, 68, 68);"></i></li>
+              <li><i class="far fa-bell" style="font-size: 1.5rem; color: rgb(68, 68, 68); "></i></li>
+              <li><button class="red-btn nav-btn">+ New Article</button></li>
+              <li class="profile-pic"><img src="./assets/profile.jpg" alt="profile pic"></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <div class="display">
+        <div class="articles">
+          <h2>Articles</h2>
+          <div class="articles">
+            <div class="single-article">
+              <img src="../blog page/assets/phone.jpg" alt="andela cup image" class="article-thumbnail">
+              <div class="article-text">
+                <h3>Why you should join Andela now,
+                  my ATLP Journey in 2021</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Commodo ac odio iaculis neque. Porta at praesent
+                  diam<span class="read-link"> Read more</span></p>
+                <p class="author">By Ivad Yves</p>
+                <div class="manage-btn">
+                  <button id="edit-btn">edit</button>
+                  <button id="delete-btn"> delete</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="messages">
+          <h3>Messages</h3>
+        </div>
+    </section>
+  </div>
+  <script src="../main.js"></script>
+  <script src="./dashboard-script.js"></script>
 </body>
 
 </html>
