adding crude operations for blog

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -34,7 +34,8 @@
             <ul class="nav-links">
               <li><i class="fas fa-search fa-1x" style="font-size: 1.5rem; color: rgb(68, 68, 68);"></i></li>
               <li><i class="far fa-bell" style="font-size: 1.5rem; color: rgb(68, 68, 68); "></i></li>
-              <li><button class="red-btn nav-btn">+ New Article</button></li>
+              <li><a href="./manage article/create-article.html"><button class="red-btn nav-btn">+ New
+                    Article</button></a></li>
               <li class="profile-pic"><img src="./assets/profile.jpg" alt="profile pic"></li>
             </ul>
           </nav>
@@ -43,9 +44,9 @@
       <div class="display">
         <div class="articles">
           <h2>Articles</h2>
-          <div class="articles">
+          <div id="articles">
             <div class="single-article">
-              <img src="../blog page/assets/phone.jpg" alt="andela cup image" class="article-thumbnail">
+              <img src="./assets/blog-post-3.jpg" alt="andela cup image" class="article-thumbnail">
               <div class="article-text">
                 <h3>Why you should join Andela now,
                   my ATLP Journey in 2021</h3>
