added edit blog and messages in dashboard

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -19,7 +19,7 @@
     <section class="main-display">
       <header>
         <div class="logo">
-          <a href="./index.html">
+          <a href="../index.html">
             <img src="../landing page/assets/Ivad Code logo.svg" alt="the image of logo" />
           </a>
         </div>
@@ -45,25 +45,12 @@
         <div class="articles">
           <h2>Articles</h2>
           <div id="articles">
-            <div class="single-article">
-              <img src="./assets/blog-post-3.jpg" alt="andela cup image" class="article-thumbnail">
-              <div class="article-text">
-                <h3>Why you should join Andela now,
-                  my ATLP Journey in 2021</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Commodo ac odio iaculis neque. Porta at praesent
-                  diam<span class="read-link"> Read more</span></p>
-                <p class="author">By Ivad Yves</p>
-                <div class="manage-btn">
-                  <button id="edit-btn">edit</button>
-                  <button id="delete-btn"> delete</button>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
         <div class="messages">
           <h3>Messages</h3>
+          <div class="messages" id="messages">
+          </div>
         </div>
     </section>
   </div>
