--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       </ul>
     </nav>
   </header>
-
   <div class="main-section">
     <section class="hero">
       <div id="column1">
@@ -81,7 +80,7 @@
             working with different clients and creating websites and products
             that change peoples lives for the better
           </p>
-          <button class="white-btn btn">Download CV</button>
+          <a href=""><button class="white-btn btn">Download CV</button></a>
         </div>
       </div>
     </section>
@@ -127,7 +126,8 @@
             <button class="red-btn btn">View project</button>
           </div>
         </div>
-        <button class="white-btn btn">checkout more projects</button>
+        <a href="https://github.com/Yvad60?tab=repositories"><button class="white-btn btn">checkout more
+            projects</button></a>
       </div>
     </section>
 
@@ -159,11 +159,16 @@
     <h3 class="text-logo"><img src="./landing page/assets/Ivad Code logo.svg" alt="logo"></h3>
     <p>&copy; IvadCode 2022</p>
     <div class="icons">
-      <p><i class="fab fa-facebook fa-1x"></i></p>
-      <p><i class="fab fa-twitter fa-1x"></i></p>
-      <p><i class="fab fa-linkedin fa-1x"></i></p>
+      <a href="">
+        <p><i class="fab fa-facebook fa-1x"></i></p>
+      </a>
+      <a href="">
+        <p><i class="fab fa-twitter fa-1x"></i></p>
+      </a>
+      <a href="">
+        <p><i class="fab fa-linkedin fa-1x"></i></p>
+      </a>
     </div>
-
   </footer>
 
   <script defer src=" ./main.js"></script>
