--- a/dashboard/manage article/create-article.html
+++ b/dashboard/manage article/create-article.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <a href="../dashboard.html">back to dashboard</a>
   <h2>Create a new article</h2>
   <form id="create-article-form">
     <ul>
