--- a/dashboard/manage article/edit-article.html
+++ b/dashboard/manage article/edit-article.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <a href="../dashboard.html">back to dashboard</a>
   <h2>Update article</h2>
   <form id="edit-article-form">
   </form>
