--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <img src="./landing page/assets/Ivad Code logo.svg" alt="the image of logo" />
       </a>
     </div>
-    <a href="#" class="toggle-btn">
+    <a id="toggle-btn" class="toggle-btn">
       <span class="bar"></span>
       <span class="bar"></span>
       <span class="bar"></span>
     </a>
     <nav>
-      <ul class="nav-links">
+      <ul class="nav-links" id="nav-links">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./blog page/blog.html">Blog</a></li>
         <li><a href="./login page/login.html">Login</a></li>
@@ -173,8 +173,6 @@
 
   <script defer src=" ./main.js"></script>
   <script defer src="./landing page/landing-script.js" type="module"></script>
-  <script defer src="./main.js" type="module"></script>
-
 </body>
 
 </html>
