--- a/login page/login.html
+++ b/login page/login.html
@@ -16,7 +16,9 @@
 <body>
 
   <div class="wrapper">
-    <img src="../landing page/assets/Ivad Code logo.svg" alt="" class="logo-image">
+    <a href="../index.html">
+      <img src="../landing page/assets/Ivad Code logo.svg" alt="" class="logo-image">
+    </a>
     <section id="login">
       <div class="form-illustration">
         <img src="./assets/login illustrator.png" alt="illustration for login">
@@ -26,9 +28,9 @@
         <div class="login-form">
           <form id="loginForm">
             <label>Email</label><br />
-            <input type="email" id="email" required /><br />
+            <input type="email" id="email" required name="email" /><br />
             <label>Password</label><br />
-            <input type="password" id="password" required /><br />
+            <input type="password" id="password" name="password" required /><br />
             <a href="#" id="forgotPassword">forgot password?</a> <br />
             <button type="submit">Login</button><br />
             <p class="sign-up">
