--- a/blog page/blog.html
+++ b/blog page/blog.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
+  <script src="https://kit.fontawesome.com/29dd4087dd.js" crossorigin="anonymous"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Blog</title>
