--- a/signup-page/signup.html
+++ b/signup-page/signup.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
+  <script src="https://kit.fontawesome.com/29dd4087dd.js" crossorigin="anonymous"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./signup-styles.css" />
@@ -18,14 +20,13 @@
       <h2>Create a new account</h2>
       <form id="signupForm">
         <label>Name</label><br />
-        <input type="text" id="name" required /><br />
+        <input type="text" id="name" name="name" required /><br />
         <label>Email</label><br />
-        <input type="email" id="email" required /><br />
+        <input type="email" id="email" name="email" required /><br />
         <label>Password</label><br />
-        <input type="password" id="password" required /><br />
+        <input type="password" id="password" name="password" required /><br />
         <label>Confirm password</label><br />
         <input type="password" id="passwordConfirm" required /><br />
-        <input type="checkbox" id="agreeTerms" required /><span>I accept <a href="#">terms and conditions</a></span>
         <button type="submit">Sign up</button>
         <p class="login">
           Already have an account?
@@ -34,10 +35,6 @@
       </form>
     </div>
   </div>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  <script src="../init-firebase.js"></script>
   <script src="./signup-script.js"></script>
   <script src="../main.js"></script>
 </body>
