--- a/signup-page/signup.html
+++ b/signup-page/signup.html
@@ -19,7 +19,7 @@
     <div class="form-data">
       <h2>Create a new account</h2>
       <form id="signupForm">
-        <label>Name</label><br />
+        <label>Full Names</label><br />
         <input type="text" id="name" name="name" required /><br />
         <label>Email</label><br />
         <input type="email" id="email" name="email" required /><br />
